# CGgraph-V1.5

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_EN.md
.cache/clangd/index/: basic_def.hpp.3C3B82E38DCE18FD.idx  basic_struct.hpp.6DF6B93CD65B7E77.idx  data_type.hpp.5BFE0D472D472486.idx  flag.cpp.EECB855FD8B047ED.idx  gflags.h.DC77BD31BD95AED6.idx
project/: CG_BFS.hpp  CG_help.hpp  CGgraphV1.5.hpp  basic_def.hpp  flag.cpp  flag.hpp  reorderGraph.hpp  single.hpp  subgraphExtraction.hpp
src/Basic/CUDA/: cuda_include.cuh
src/Basic/Console/: console_V3_3.hpp
src/Basic/Graph/: graphFileList.hpp
src/Basic/Type/: data_type.hpp
src/Compat/gflags/gflags/: gflags.h  gflags_declare.h
src/Compat/mpi/: mpi.h
